--- a/app/package.json
+++ b/app/package.json
@@ -41,7 +41,9 @@
     "simplebar-react": "^3.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",    
+    "multer": "^1.4.5-lts.1",
+    "@types/multer": "^1.4.7",
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
