--- a/app/package.json
+++ b/app/package.json
@@ -1,76 +1,56 @@
 {
-  "name": "scan-center",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:5000",
+  "name": "scan-center-api",
+  "version": "1.0.0",
+  "main": "dist/app.js",
+  "type": "module",
+  "author": "naveen",
+  "license": "",
+  "scripts": {
+    "build": "rimraf dist && tsc",
+    "preserve": "yarn run build",
+    "serve": "concurrently \"tsc --watch\" \"nodemon ./dist/app.js\"",
+    "prestart": "yarn run build",
+    "start": "node dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@faker-js/faker": "^7.6.0",
-    "@iconify/react": "^4.1.0",
-    "@mui/lab": "^5.0.0-alpha.123",
-    "@mui/material": "^5.11.13",
-    "@mui/styles": "^5.12.0",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "apexcharts": "^3.37.1",
-    "change-case": "^4.1.2",
-    "date-fns": "^2.29.3",
-    "formik": "^2.2.9",
-    "i18next": "^22.4.12",
-    "lodash": "^4.17.21",
-    "mui-one-time-password-input": "^1.1.2",
-    "numeral": "^2.0.6",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
-    "react-barcodes": "^1.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.43.7",
-    "react-i18next": "^12.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "simplebar-react": "^3.2.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "yup": "^1.0.2",    
-    "multer": "^1.4.5-lts.1",
+    "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.6",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "date-fns": "2.29.2",
+    "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
+    "helmet": "^4.6.0",
+    "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.5.5",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "rimraf": "^3.0.2",
+    "sequelize": "6.21.4",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191",
-    "@types/numeral": "^2.0.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.4",
+    "@types/http-errors": "^1.8.0",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.11.6",
+    "concurrently": "^6.3.0",
+    "nodemon": "^2.0.14",
+    "sequelize-cli": "^6.2.0",
+    "ts-node": "^10.4.0"
   }
 }
